<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="@drawable/sidebar_bg"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:src="@drawable/close"
            android:id="@+id/close"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_gravity="right"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/ll_wishlist"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/wishlist"
                android:layout_height="@dimen/_25sdp"/>
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewSemiBold
                android:layout_width="wrap_content"
                android:text="@string/wishlist"
                android:layout_gravity="center"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/ll_contact_us"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/contact"
                android:layout_height="@dimen/_25sdp"/>

            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/ll_change_pwd"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/password"
                android:layout_height="@dimen/_25sdp"/>
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewSemiBold
                android:layout_width="wrap_content"
                android:text="@string/change_password"
                android:layout_gravity="center"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/terms_conditions"
                android:layout_height="@dimen/_25sdp"/>
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewSemiBold
                android:layout_width="wrap_content"
                android:text="Terms &amp; Conditions"
                android:layout_gravity="center"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/privacy"
                android:layout_height="@dimen/_25sdp"/>
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewSemiBold
                android:layout_width="wrap_content"
                android:text="@string/privacy_policy"
                android:layout_gravity="center"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/ll_logout"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/logout"
                android:layout_height="@dimen/_25sdp"/>
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewSemiBold
                android:layout_width="wrap_content"
                android:text="@string/logout"
                android:layout_gravity="center"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>