<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:gravity="center_vertical"
            android:background="@drawable/cover_img"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_120sdp"
                android:id="@+id/img_profile_pic"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_height="@dimen/_120sdp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:id="@+id/ll_edit_profile"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:background="@drawable/boarder_card_view"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/locations"
                    android:layout_height="wrap_content"/>
                <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewMedium
                    android:layout_width="wrap_content"
                    android:text="@string/editprofile"
                    android:layout_gravity="center"
                    android:textColor="@color/blacktext"
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_height="wrap_content">
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewSemiBold
                android:layout_width="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/blacktext"
                android:textSize="@dimen/_12sdp"
                android:layout_height="wrap_content"/>
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                android:id="@+id/tv_name"
                android:textColor="@color/blacktext"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_height="wrap_content">
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewSemiBold
                android:layout_width="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/blacktext"
                android:textSize="@dimen/_12sdp"
                android:layout_height="wrap_content"/>
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                 android:id="@+id/tv_last_name"
                android:textColor="@color/blacktext"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_height="wrap_content">
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewSemiBold
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:textColor="@color/blacktext"
                android:textSize="@dimen/_12sdp"
                android:layout_height="wrap_content"/>
            <com.urbanspts.urbanspts.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                android:text="kemi@compass-supported-living.co.uk"
                android:textColor="@color/blacktext"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/tv_email"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>